--- a/frontend/src/app/pages/admin/admin-page.component.scss
+++ b/frontend/src/app/pages/admin/admin-page.component.scss
@@ -267,8 +267,8 @@
   border: 1px solid var(--border-color);
 
   &[data-role='Admin'] {
-    color: #8F1D31;
-    border-color: #8F1D31;
+    color: #701726;
+    border-color: #701726;
   }
 }
 
